<resources>
    <string name="app_name">SmartSMTMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_feeder_cache_region">
        FeederCacheRegionActivity
    </string>
    <string name="title_activity_feeder_warning">
        FeederWarningActivity
    </string>

    <!--PCB  库房-->
    <string name="confirm">确定</string>
    <string name="check_all">全选</string>
    <string name="cancel">取消</string>
    <string name="option_stock">备料</string>
    <string name="option_storage">入库</string>
    <string name="option_check">盘点</string>
    <string name="tv_work">工单号: </string>
    <string name="tv_machine">主板和小板: </string>
    <string name="tv_pcb">PCB料号: </string>
    <string name="waring_buttom">点亮对应位置的灯</string>
    <string name="storage_enterbtn">手动键入</string>
    <string name="storage_emptybtn">全部清空</string>
    <string name="storage_pcbtv">料号：</string>
    <string name="storage_PCBCODE">P/C: </string>
    <string name="storage_datacodetv">D/C: </string>
    <string name="storage_labeltv">标签编号：</string>
    <string name="storage_idtv">移动标签ID：</string>
    <string name="storage_numbertv">入库数量：</string>
    <string name="storage_factorytv">厂别：</string>
    <string name="storage_pcbcodetv">PCBCode: </string>
    <string name="cargonumber">散料数量: </string>
    <string name="cargon_affirm">散料确认</string>
    <string name="cargon_clean">清空列表</string>
    <string name="storage_text">当前需要入库的料箱信息</string>
    <string name="cargon_text">当前盘点架位: </string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="storetitle">PCB库房发料</string>
    <string name="timetext">距离上线时长：</string>
    <string name="warning_pcbnumber">PCB料号</string>
    <string name="warning_pcbid">PCB流水号</string>
    <string name="pcb_number">PCB料号</string>
    <string name="pcb_price">架位</string>
    <string name="pcb_thenumber">已发料量</string>
    <string name="pcb_demand">需求量</string>
    <string name="pcb_code">P/C</string>
    <string name="storage_pcb">料号</string>
    <string name="pcb_time">D/C</string>
    <string name="pcb_count">数量</string>
    <string name="statistics_id">PCB流水号</string>
    <string name="statistics_pcbnumber">在库数量</string>
    <string name="statistics_number">盘点数量</string>
    <string name="statistics_storenumber">盘点状态</string>
    <string name="pcbku">PCB库房入库</string>
    <string name="dialogerrortitle">盘点异常</string>
    <string name="error_alteration">变更架位</string>
    <string name="error_cancel">取消</string>
    <string name="dialogresulttitle">盘点结果</string>
    <string name="result_cancel">继续盘点本架位</string>
    <string name="result_alteration">完成本架位盘点</string>
    <string name="ToolsFeedBack">治具入架位</string>
    <string name="pcbcheck">PCB库房盘点</string>
    <string name="ProductToolsBarCodePlus">治具二维码:</string>
    <string name="LocationBarCode">架位二维码:</string>
    <string name="Back">返回</string>
    <string name="WordNumber">工单号</string>
    <string name="WordType">工单类型</string>
    <string name="MachineType">机种</string>
    <string name="PCB_Code">PCB Code</string>
    <string name="FormMaterialNumber">组合料号</string>
    <string name="Line">线别</string>
    <string name="PWB_MaterialNumber">PWB料号</string>
    <string name="Cover">面别</string>
    <string name="PlanOnLineTime">计划上线时间</string>
    <string name="ProductToolsStatus">治具状态</string>
    <string name="WorkNumberPlus">工单号:</string>
    <string name="ProductToolsBarCode">治具二维码</string>
    <string name="ProductToolsType">治具类型</string>
    <string name="ProductToolsLocation">所在架位</string>
    <string name="ReSelect">重新选择</string>
    <string name="Status">状态</string>
    <string name="TurnNumber">序号</string>
    <string name="AreReady">准备就绪</string>
    <string name="storage_submit">确认入库</string>
    <string name="storage_clear"> 取&#160;消&#160; </string>
    <string name="title_storehint">提示</string>
    <string name="storehint">您确认要进行点灯操作吗？</string>
    <string name="hasComplete">已完成</string>
    <string name="startAndstop_startwork">开始本次盘点</string>
    <string name="startAndstop_stopwork">结束本次盘点</string>
    <string name="storage_counttv">数量：</string>
    <string name="continues">继续</string>
    <string name="uncheck">未盘点的价位</string>
    <string name="affirm">确认</string>
    <string name="dialog_stopwork_content">请确认是否结束盘点！</string>
    <string name="dialog_rollback_content">请确认是否回退到上一个界面！</string>
    <string name="dialog_affirm_content">是否确认备料！</string>
    <string name="pcb_ed_storehint">请输入货架编号！</string>


    <string name="MainBoard">主板:</string>
    <string name="LittleBoard">小板:</string>
    <string name="unfinished_station">还没有开始发料，不能扣账！</string>
    <string name="server_error_message"> 无法连接到服务器，请确认是否处于联网状态，服务器是否开启，如果一直有问题请联系管理员！</string>
    <string name="scan_remain_car_message">请扫描对应料车</string>
    <string name="scan_corresponding_materials_plate">请扫描对应料盘！</string>
    <string name="debit_success">扣账成功</string>
    <string name="debit_failed">扣账失败</string>
    <string name="mantissa＿warehouse＿stock">尾数仓备料</string>
    <string name="pcbmaintain_number">编号</string>
    <string name="pcbmaintain_framelocation">架位二维码</string>
    <string name="pcbmaintain_Led">LED二维码</string>
    <string name="pcbmaintainnext">下一个货架</string>
    <string name="WorkID">工单</string>
    <string name="Side">面别</string>

    <!--Feeder 备料-->
    <string name="FeederSupply">Feeder备料</string>
    <string name="FeederCache">Feeder 暂存区备料</string>
    <string name="edit_complete">编辑完成并上传</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="debit">扣账</string>
    <string name="debit_hand">手动扣账</string>
    <string name="debit_auto">自动扣账</string>
    <string name="crash_toast_text">程序崩溃，已上传服务器</string>
    <string name="crash_dialog_text">程序崩溃</string>
    <string name="bindMatericalcar">绑定备料车</string>
    <string name="upload">上传</string>
    <string name="debitManually">手动扣账</string>
    <string name="upLoadToMESAuto">自动上传到MES</string>

    <!--仓库入库-->
    <string name="store_num">入库单号:</string>
    <string name="storecar_num">材料入库车:</string>
    <string name="material_num">料号</string>
    <string name="material_sum">数量</string>
    <string name="material_label">标签</string>
    <string name="material_frame">架位</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="ji">记住密码</string>
    <string name="feedingList">上料列表：</string>
    <string name="materialList">发料列表：</string>
    <string name="send_backup_area">发送到备料区</string>
    <string name="storage">仓库</string>
    <string name="workOrder">工单：</string>
    <string name="line">线别：</string>
    <string name="side">面别：</string>

</resources>
