<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linean"
    >

    <TextView
        android:id="@+id/pcb_number"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcb_number"
        style="@style/item_textstyle"

        />

    <TextView
        android:id="@+id/pcb_price"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcb_price"
        style="@style/item_textstyle"
        />
    <TextView
        android:id="@+id/pcb_thenumber"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcb_thenumber"
        style="@style/item_textstyle"
        />
    <TextView
        android:id="@+id/pcb_code"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcb_code"
        style="@style/item_textstyle"
        />
    <TextView
        android:id="@+id/pcb_time"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcb_time"
        style="@style/item_textstyle"
        />
</com.zhy.autolayout.AutoLinearLayout>
