<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/px_100"
    >
    <TextView
        android:id="@+id/statistics"
        android:layout_width="@dimen/px_300"
        android:layout_height="match_parent"
        android:text="@string/warning_pcbnumber"
        style="@style/item_textstyle"

        />

    <TextView
        android:id="@+id/statistics_pcbnumber"
        android:layout_width="@dimen/px_260"
        android:layout_height="match_parent"
        android:text="@string/statistics_pcbnumber"
        style="@style/item_textstyle"

        />

    <TextView
        android:id="@+id/statistics_number"
        android:layout_width="@dimen/px_260"
        android:layout_height="match_parent"
        android:text="@string/statistics_number"
        style="@style/item_textstyle"
        />
    <TextView
        android:id="@+id/statistics_storenumber"
        android:layout_width="@dimen/px_260"
        android:layout_height="match_parent"
        android:text="@string/statistics_storenumber"
        style="@style/item_textstyle"
        />

</com.zhy.autolayout.AutoLinearLayout>
