<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="85px">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/TurnNumber"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/TurnNumber"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/ProductToolsBarCode"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsBarCode"/>


    <TextView
        android:id="@+id/ProductToolsType"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/ProductToolsType"
        android:textColor="#333333"
        android:textSize="35px" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/ProductToolsLocation"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsLocation"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/ReSelect"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ReSelect"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/Status"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/Status"/>

</com.zhy.autolayout.AutoLinearLayout>