<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85px"
    android:id="@+id/item_product_borrow"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/WordNumber"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/WorkNumber"/>


    <TextView
        android:layout_width="0dp"
        android:background="@drawable/textview_border"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:text="主板"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/MainBroad"/>


    <TextView
        android:layout_width="0dp"
        android:background="@drawable/textview_border"
        android:layout_height="match_parent"
        android:layout_weight="14"
        android:gravity="center"
        android:text="小板"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/LittleBroad"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/PCB_Code"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/PWB_Code"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/FormMaterialNumber"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/FormMaterialNumber"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/Line"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/Line"/>

    <TextView
        android:id="@+id/PWB_MaterialNumber"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/PWB_MaterialNumber"
        android:textColor="#333333"
        android:textSize="35px"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:text="@string/Cover"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/Cover"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/PlanOnLineTime"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/PlanOnLineTime"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/Status"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsStatus"/>
</com.zhy.autolayout.AutoLinearLayout>