<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="85px">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/TurnNumber"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/TurnNumber"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/ProductToolsBarCode"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/ProductToolsBarCode"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/ProductToolsType"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/ProductToolsType"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/ProductToolsLocation"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/ProductToolsLocation"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/ReSelect"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/ReSelect"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/Status"
        android:textColor="#333333"
        android:textSize="40px"
        android:id="@+id/Status"/>

</LinearLayout>