<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/dialogStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_storehint" />

    <TextView
        android:id="@+id/dialog_stopwork_content"
        style="@style/dialogStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stopwork_content" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/px_0"
            android:layout_height="@dimen/px_20"
            android:layout_weight="2" />

        <Button
            android:id="@+id/stopwork_affirm"
            android:layout_width="@dimen/px_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/affirm" />

        <Button
            android:id="@+id/stopwork_cancel"
            android:layout_width="@dimen/px_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/storage_clear" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>