<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/pcbmaintain_number"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        android:text="@string/pcbmaintain_number"
        style="@style/item_textstyle"
        />
    <TextView
    android:id="@+id/pcbmaintain_framelocation"
    android:layout_width="@dimen/px_360"
    android:layout_height="wrap_content"
    android:text="@string/pcbmaintain_framelocation"
    style="@style/item_textstyle"
    />
    <TextView
        android:id="@+id/pcbmaintain_Led"
        android:layout_width="@dimen/px_360"
        android:layout_height="wrap_content"
        style="@style/item_textstyle"
        android:text="@string/pcbmaintain_Led"
        />

</com.zhy.autolayout.AutoLinearLayout>