<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="85px">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/TurnNumber"
        android:textColor="#333333"
        android:textSize="30px"
        android:id="@+id/TurnNumber"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/ProductToolsBarCode"
        android:textColor="#333333"
        android:textSize="30px"
        android:id="@+id/ProductToolsBarCode"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/WordNumber"
        android:textColor="#333333"
        android:textSize="30px"
        android:id="@+id/WorkNumber"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/ProductToolsType"
        android:textColor="#333333"
        android:textSize="30px"
        android:id="@+id/ProductToolsType"/>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="#cccccc" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/Status"
        android:textColor="#333333"
        android:textSize="30px"
        android:id="@+id/Status"/>



</com.zhy.autolayout.AutoLinearLayout>