<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="85px">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/TurnNumber"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/TurnNumber"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:text="@string/ProductToolsBarCode"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsBarCode"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:text="@string/ProductToolsType"
        android:background="@drawable/textview_border"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsType"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:background="@drawable/textview_border"
        android:text="@string/ProductToolsLocation"
        android:textColor="#333333"
        android:textSize="35px"
        android:id="@+id/ProductToolsLocation"/>

</com.zhy.autolayout.AutoLinearLayout>