<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/px_20"
    android:background="@color/textcolor">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_20"
        android:text="@string/title_storehint"
        android:textSize="@dimen/px_60"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_affirm_content"
        android:padding="@dimen/px_40"
        android:textSize="@dimen/px_40"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/px_20"
        android:layout_marginRight="@dimen/px_20"
        >
        <View
            android:layout_width="@dimen/px_0"
            android:layout_height="@dimen/px_0"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/dialog_affirm_affirm"
            android:layout_width="@dimen/px_0"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/affirm"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/dialog_affirm_cancel"
            android:layout_width="@dimen/px_0"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/cancel"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>