<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textcolor"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        style="@style/dialogStyle"
        android:text="@string/dialogerrortitle"
        />
    <TextView
        android:id="@+id/error_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        style="@style/dialogStyle"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/px_60"
    android:layout_marginBottom="@dimen/px_20"
    android:orientation="horizontal"
    >
    <View
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="3"
        />
    <Button
        android:id="@+id/error_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_30"
        android:layout_weight="1"
        android:text="@string/error_cancel"
        style="@style/pcb_button"
        />
    <Button
        android:id="@+id/error_alteration"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_30"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/px_20"
        android:text="@string/error_alteration"
        style="@style/pcb_button"
        />
</LinearLayout>
</LinearLayout>