<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textcolor"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        style="@style/dialogStyle"
        android:text="@string/dialogresulttitle"
        />
    <TextView
        android:id="@+id/result_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        style="@style/dialogStyle"
        />
<com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/px_20"
    >
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_30"
        android:layout_weight="0.5"
        />
    <Button
        android:id="@+id/result_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_30"
        android:layout_weight="1.5"
        android:text="@string/result_cancel"
        style="@style/pcb_button"
        />
    <Button
        android:id="@+id/result_alteration"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_30"
        android:layout_marginRight="@dimen/px_20"
        android:layout_weight="1.5"
        android:text="@string/result_alteration"
        android:layout_marginLeft="@dimen/px_20"
        style="@style/pcb_button"
        />
</com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>