<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    android:orientation="vertical">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30px" />


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60px"
        android:layout_marginTop="20px"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10px">


        <Button
            android:id="@+id/bt_sheet_cancel"
            android:layout_width="152px"
            android:layout_height="70px"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="40px" />

        <Button
            android:id="@+id/bt_sheet_select_all"
            android:layout_width="152px"
            android:layout_height="70px"
            android:layout_marginLeft="50px"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/check_all"
            android:textColor="@android:color/white"
            android:textSize="40px" />

        <Button
            android:id="@+id/bt_sheet_confirm"
            android:layout_width="152px"
            android:layout_height="70px"
            android:layout_marginLeft="50px"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:text="@string/debit"
            android:textColor="@android:color/white"
            android:textSize="40px" />
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
